// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name: example-provider-functions 1`] = `
"// generated from provider function schema

import * as cdktn from 'cdktn';

/**
* Provider-defined functions of the example provider.
*/
export class ExampleProviderFunctions {

  /**
  * Returns an object describing the build that produced the given seed.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string} seed
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static buildInfo(seed: string, providerLocalName?: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "build_info", [seed]);
  }

  /**
  * Returns true_value if condition is true, otherwise returns false_value. The dynamic return type allows either branch to be a value of any type.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {boolean | IResolvable} condition
  * @param {any} trueValue
  * @param {any} falseValue
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static conditionIf(condition: boolean | cdktn.IResolvable, trueValue: any, falseValue: any, providerLocalName?: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "condition_if", [condition, trueValue, falseValue]);
  }

  /**
  * Renders the given map of config objects as a single string.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {any} configs
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static configMap(configs: any, providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "config_map", [configs]));
  }

  /**
  * Returns true if any flag in the given set of flags is true.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {Array<boolean | IResolvable>} flags
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static flagSet(flags: Array<boolean | cdktn.IResolvable>, providerLocalName?: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "flag_set", [flags]);
  }

  /**
  * Joins the given strings together using the provided separator.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string} separator
  * @param {Array<string>} values
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static joinStrings(separator: string, values: string[], providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "join_strings", [separator, ...values]));
  }

  /**
  * A deprecated helper kept around for backwards compatibility.
  * @deprecated Use new_helper instead.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string} input
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static legacyHelper(input: string, providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "legacy_helper", [input]));
  }

  /**
  * Returns a list of numbers counting up from 1 to the given count.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {number} count
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static listNumbers(count: number, providerLocalName?: string): number[] {
    return cdktn.Token.asNumberList(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "list_numbers", [count]));
  }

  /**
  * Returns a list of names prefixed with the given prefix.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string} prefix
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static listPrefixedNames(prefix: string, providerLocalName?: string): string[] {
    return cdktn.Token.asList(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "list_prefixed_names", [prefix]));
  }

  /**
  * Joins a possibly-null prefix with a required suffix.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string | null} prefix
  * @param {string} suffix
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static midNullable(prefix: any, suffix: string, providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "mid_nullable", [prefix, suffix]));
  }

  /**
  * Flattens a matrix (a list of lists of strings) into a single string.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {Array<Array<string>>} matrix
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static nestedList(matrix: string[][], providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "nested_list", [matrix]));
  }

  /**
  * Adds up a default starting value and any number of addends.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {number} defaultValue
  * @param {Array<number>} addends
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static sum(defaultValue: number, addends: number[], providerLocalName?: string): number {
    return cdktn.Token.asNumber(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "sum", [defaultValue, ...addends]));
  }

  /**
  * Renders the given map of string tags as a single string.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {{ [key: string]: string }} tags
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static tagMap(tags: { [key: string]: string }, providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "tag_map", [tags]));
  }

  /**
  * Greets the given name, optionally with a custom greeting.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string} name
  * @param {string | null} greeting
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static trailingNullable(name: string, greeting?: string, providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "trailing_nullable", [name, greeting]));
  }

  /**
  * Joins a label with any number of possibly-null items.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string} label
  * @param {Array<string | null>} items
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static variadicNullable(label: string, items: any[], providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "variadic_nullable", [label, ...items]));
  }
}
"
`;

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name: provider-index 1`] = `
"// generated by cdktn get
export * as providerFunctions from './provider-functions/index';

"
`;

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name: provider-lazy-index 1`] = `
"// generated by cdktn get
Object.defineProperty(exports, 'providerFunctions', { get: function () { return require('./provider-functions'); } });

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): provider-index 1`] = `
"// generated by cdktn get
export * as staticResource from './static-resource/index';
export * as providerFunctions from './provider-functions/index';

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): provider-lazy-index 1`] = `
"// generated by cdktn get
Object.defineProperty(exports, 'staticResource', { get: function () { return require('./static-resource'); } });
Object.defineProperty(exports, 'providerFunctions', { get: function () { return require('./provider-functions'); } });

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): time-provider-functions 1`] = `
"// generated from provider function schema

import * as cdktn from 'cdktn';

/**
* Provider-defined functions of the time provider.
*/
export class TimeProviderFunctions {

  /**
  * Given a [Go duration string](https://pkg.go.dev/time#ParseDuration), will parse and return an object representation of that duration.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string} duration Go time package duration string to parse
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static durationParse(duration: string, providerLocalName?: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "time", "duration_parse", [duration]);
  }

  /**
  * Given an RFC3339 timestamp string, will parse and return an object representation of that date and time.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {string} timestamp RFC3339 timestamp string to parse
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static rfc3339Parse(timestamp: string, providerLocalName?: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "time", "rfc3339_parse", [timestamp]);
  }

  /**
  * Given a unix timestamp integer, will parse and return an object representation of that date and time. A unix timestamp is the number of seconds elapsed since January 1, 1970 UTC.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param {number} unixTimestamp Unix Timestamp integer to parse
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static unixTimestampParse(unixTimestamp: number, providerLocalName?: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "time", "unix_timestamp_parse", [unixTimestamp]);
  }
}
"
`;
